--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -42,6 +42,7 @@ a:visited {
 
 input, textarea, img {
   font-family: $font;
+  font-size: $font-size;
   border-radius: 10px;
   padding: 5px;
   text-decoration: none;
@@ -49,7 +50,7 @@ input, textarea, img {
 }
 
 figcaption {
-  color: darken($base-light,10%);
+  color: darken($accent-light,10%);
 }
 
 table {
